--- a/src/config/jdbc.properties
+++ b/src/config/jdbc.properties
@@ -6,6 +6,8 @@
 
 #mysql
 jdbc.driverClassName=com.mysql.jdbc.Driver  
-jdbc.url=jdbc:mysql\://localhost\:3306/nicefish?useUnicode\=true&characterEncoding\=UTF-8&zeroDateTimeBehavior\=convertToNull
-jdbc.username=nicefish
-jdbc.password=nicefish
+jdbc.url=jdbc:mysql\://localhost\:3306/myblog?useUnicode\=true&characterEncoding\=UTF-8&zeroDateTimeBehavior\=convertToNull
+#jdbc.username=nicefish
+#jdbc.password=nicefish
+jdbc.username=root
+jdbc.password=123456
