--- a/src/config/jdbc.properties
+++ b/src/config/jdbc.properties
@@ -6,8 +6,15 @@
 
 #mysql
 jdbc.driverClassName=com.mysql.jdbc.Driver  
-jdbc.url=jdbc:mysql\://localhost\:3306/myblog?useUnicode\=true&characterEncoding\=UTF-8&zeroDateTimeBehavior\=convertToNull
+#localhost
+#jdbc.url=jdbc:mysql\://localhost\:3306/myblog?useUnicode\=true&characterEncoding\=UTF-8&zeroDateTimeBehavior\=convertToNull
 #jdbc.username=nicefish
 #jdbc.password=nicefish
-jdbc.username=root
-jdbc.password=123456
+#jdbc.username=root
+#jdbc.password=123456
+
+#aliyun
+jdbc.url=jdbc:mysql\://119.23.209.42\:3306/myblog?useUnicode\=true&characterEncoding\=UTF-8&zeroDateTimeBehavior\=convertToNull
+jdbc.username=zhangjing
+jdbc.password=Qaz8325629!@
+
