--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -12,16 +12,21 @@
 	<!-- 不拦截静态文件 -->
     <servlet-mapping>
         <servlet-name>default</servlet-name>
-        <url-pattern>/js/*</url-pattern>
-        <url-pattern>/css/*</url-pattern>
-        <url-pattern>/images/*</url-pattern>
-        <url-pattern>/fonts/*</url-pattern>
-      	<url-pattern>/html/*</url-pattern> -->
+        <url-pattern>/assets/*</url-pattern>
       	<url-pattern>*.gif</url-pattern>
       	<url-pattern>*.jpg</url-pattern>  
       	<url-pattern>*.png</url-pattern>  
       	<url-pattern>*.jpeg</url-pattern>  
-      	<url-pattern>*.bmp</url-pattern>  
+      	<url-pattern>*.bmp</url-pattern>
+      	<url-pattern>*.html</url-pattern>  
+      	<url-pattern>*.js</url-pattern>
+      	<url-pattern>*.svg</url-pattern>
+      	<url-pattern>*.eot</url-pattern>
+      	<url-pattern>*.ttf</url-pattern>
+      	<url-pattern>*.woff2</url-pattern>
+      	<url-pattern>*.woff</url-pattern>
+      	<url-pattern>*.map</url-pattern>
+      	<url-pattern>*.ico</url-pattern>
     </servlet-mapping>
     
     <!-- 字符集拦截器 -->
@@ -65,7 +70,7 @@
   	</servlet-mapping>
   	
   	
-  	<servlet>
+  	<!-- <servlet>
     	<servlet-name>DruidStatView</servlet-name>
 		<servlet-class>com.alibaba.druid.support.http.StatViewServlet</servlet-class>
   	</servlet>
@@ -80,13 +85,12 @@
     <error-page>
         <error-code>500</error-code>
         <location>/errorPage/500.jsp</location>
-    </error-page>
+    </error-page> -->
   	<welcome-file-list>
-    	<welcome-file>index.html</welcome-file>
 	    <welcome-file>index.htm</welcome-file>
-	    <welcome-file>index.jsp</welcome-file>
-	    <welcome-file>default.html</welcome-file>
+	    <!-- <welcome-file>index.jsp</welcome-file> -->
+	    <!-- <welcome-file>default.html</welcome-file>
 	    <welcome-file>default.htm</welcome-file>
-	    <welcome-file>default.jsp</welcome-file>
+	    <welcome-file>default.jsp</welcome-file> -->
   	</welcome-file-list>
 </web-app>
